<ScrollView
    android:layout_width="300sp"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:background="@drawable/drawer_shadow"
    android:clickable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/linearLayout"
            android:layout_margin="4sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ABOUT"
                android:id="@+id/textView"
                android:textSize="45sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/title_1"
                android:layout_margin="4sp"
                android:padding="4sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="159dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section1_sh1"
                    android:id="@+id/textView2"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_1"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section1_sh2"
                    android:id="@+id/textView3"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_1"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/linearLayout2"
            android:layout_margin="4sp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ANDROID"
                android:id="@+id/textView6"
                android:textSize="45sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/title_2"
                android:layout_margin="4sp"
                android:padding="4sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="159dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section2_sh1"
                    android:id="@+id/textView7"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_2"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section2_sh2"
                    android:id="@+id/textView8"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_2"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section2_sh3"
                    android:id="@+id/textView12"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_2"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:id="@+id/linearLayout3"
            android:layout_margin="4sp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="WEBSITES"
                android:id="@+id/textView9"
                android:textSize="45sp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/title_3"
                android:layout_margin="4sp"
                android:padding="4sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="159dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section3_sh1"
                    android:id="@+id/textView10"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_3"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section3_sh2"
                    android:id="@+id/textView11"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="30sp"
                    android:textColor="@color/title_3"
                    android:layout_marginTop="4sp"
                    android:padding="4sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/linearLayout5"
            android:layout_margin="4sp" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/window_bg_grey">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ben Plant 2014"
                    android:id="@+id/textView4"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:layout_marginTop="8sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="benplant96@googlemail.com"
                    android:id="@+id/textView5"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-thin"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="8sp"
                    android:layout_marginRight="8sp"
                    android:layout_marginBottom="8sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>